kyverno/base/policies/prisma/ensure-prisma-ip-in-middleware.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ensure-prisma-ip-in-middleware
spec:
  mutateExistingOnPolicyUpdate: true
  rules:
    - name: default
      match:
        any:
          - resources:
              kinds:
                - Middleware
              selector:
                matchLabels:
                  kubernetes.io/ingress.class: traefik-public-v2-argo
                  policy.prisma.uw.io/ip.whitelist: "true"
      mutate:
        patchStrategicMerge:
          spec:
            ipWhiteList:
              ipStrategy:
                depth: 1
              sourceRange:
                - 34.96.70.57
                - 34.117.238.171
                - 34.120.72.104
                - 35.190.22.129
                - 54.76.156.48
                - 54.76.157.26
                - 54.76.216.254
                - 54.76.220.222
                - 54.76.238.253
                - 54.77.21.231
                - 54.78.119.116
                - 54.78.181.151
                - 54.155.74.163
                - 54.155.86.202
                - 54.155.95.11
                - 54.155.249.239
                - 54.170.9.181
                - 54.170.13.161
                - 54.170.101.143
                - 54.170.101.183
                - 54.170.105.138
                - 54.170.124.92
                - 54.170.127.242
                - 54.170.137.190
                - 54.170.147.196
                - 54.170.152.197
                - 130.41.34.127
                - 130.41.36.44
                - 130.41.36.45
                - 130.41.36.89
                - 130.41.36.90
                - 130.41.36.91
                - 130.41.36.92
                - 130.41.36.93
                - 130.41.36.94
                - 130.41.36.97
                - 130.41.36.98
                - 130.41.36.160
                - 130.41.36.161
                - 130.41.36.162
                - 130.41.36.205
                - 130.41.36.206
                - 130.41.36.209
                - 130.41.36.210
                - 130.41.36.251
                - 130.41.36.252
                - 130.41.86.170
                - 130.41.102.33
                - 130.41.102.34
                - 130.41.102.35
                - 130.41.102.36
                - 130.41.186.91
                - 130.41.186.92
                - 130.41.186.239
                - 130.41.186.240
                - 130.211.39.43
                - 137.83.214.127
                - 137.83.255.72
                - 137.83.255.151
                - 137.83.255.235
                - 137.83.255.236
                - 137.83.255.237
                - 137.83.255.238
                - 137.83.255.239
                - 137.83.255.240
                - 165.1.154.222
                - 165.1.154.223
                - 165.1.167.0
                - 165.1.167.98
                - 208.127.46.96
                - 208.127.46.214
                - 208.127.49.85
                - 208.127.49.86
                - 208.127.49.87
                - 208.127.49.88
                - 208.127.49.91
                - 208.127.49.92
                - 208.127.49.93
                - 208.127.49.94
                - 208.127.49.95
                - 208.127.49.96
                - 208.127.49.97
                - 208.127.49.98
                - 208.127.49.99
                - 208.127.49.106
                - 208.127.49.116
                - 208.127.49.117
                - 208.127.49.118
                - 208.127.49.119
                - 208.127.49.120
                - 208.127.49.121
                - 208.127.49.122
                - 208.127.49.123
                - 208.127.49.124
                - 208.127.49.125
                - 208.127.49.126
                - 208.127.49.127
                - 208.127.49.128
                - 208.127.49.129
                - 208.127.49.130
                - 208.127.49.131
                - 208.127.49.132
                - 208.127.49.133
                - 208.127.49.134
                - 208.127.49.135
                - 208.127.49.136
                - 208.127.49.137
                - 208.127.49.138
                - 208.127.49.139
                - 208.127.49.140
                - 208.127.49.153
                - 208.127.49.154
                - 208.127.49.155
                - 208.127.49.156
                - 208.127.49.248
                - 208.127.50.106
                - 208.127.52.0
                - 208.127.52.1
                - 208.127.55.3
                - 208.127.55.29
                - 208.127.61.153
                - 208.127.61.154
                - 208.127.63.27
                - 208.127.107.57
                - 208.127.107.137
                - 208.127.173.80
                - 208.127.173.81
                - 208.127.173.115
                - 208.127.202.4
